# practice-flask-app

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  users.json
test_flask_app/: app.py
test_flask_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_flask_app/blueprints/coding/: __init__.py  module.py
test_flask_app/templates/: base.html  index.html  user.html
